# CG-HW3

./: .gitignore  README.md  environment.yml
hw3-rast/: CMakeLists.txt  README.md  diffusion_shading.py  environment.yml  hw-rast.cpp  swgl-rast.cpp  swgl.cpp
src/hw3-rast/: README.md  export_utils.cpp  export_utils.h  hw-rast.cpp  swgl.h
